--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -18,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HW1_MobileSecurity"
         tools:targetApi="31">
+        <activity
+            android:name=".SuccessActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
